[add] approvelカラム user/index
ファンクラブadmin承認待ちのため、まだ途中

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -2,3 +2,8 @@ ja:
   devise:
     omniauth_callbacks:
       failure: "%{kind} 認証に失敗しました (%{reason})"
+    registrations:
+      user:
+        signed_up_but_not_approved: 'あなたが正常にサインアップしているが、あなたのアカウントが管理者によって承認されていない、まだ'
+    failure:
+      not_approved: 'あなたのアカウントはまだ管理者によって承認されていません'
